<resources>
	<dimen name="list_text_size">20dp</dimen>
    <string name="app_name">武生院图书馆</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">武生院图书馆</string>
    <color name="school">#ffa2d973</color>
    <!--string name="main_books">Books</string>
    <string name="main_mylib">MyLib</string>
    <string name="main_school">School</string>
    <string name="main_about">About</string>
    <string name="books_favorite">Favorite</string>
    <string name="books_hot">Hot</string>
    <string name="books_tools">Tools</string>
    <string name="books_search">Search</string>
    <string name="mylib_login">Login</string>
    <string name="mylib_renew">Renew</string>
    <string name="mylib_history">History</string>
    <string name="mylib_financial">Financial</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_remember">Remember</string-->
    <string name="main_books">书籍</string>
    <string name="main_mylib">图书馆</string>
    <string name="main_school">新闻</string>
    <string name="main_about">关于</string>
    <string name="books_favorite">书签</string>
    <string name="books_hot">热词</string>
    <string name="books_tools">小工具</string>
    <string name="books_search">搜索</string>
    <string name="mylib_login">登录</string>
    <string name="mylib_renew">续借</string>
    <string name="mylib_history">借阅史</string>
    <string name="mylib_financial">财经</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密&#160;&#160;&#160;码</string>
    <string name="login_remember">记住密码</string>
   
    <string name="setting_title_term">&#160;&#160;&#160;&#160;检索条件</string>
    <string name="setting_title_pagenum">&#160;&#160;&#160;&#160;每页显示</string>
    <string name="setting_title_sort">&#160;&#160;&#160;&#160;排序选项</string>
    <string name="setting_title_sortway">&#160;&#160;&#160;&#160;排序方式</string>
    <string name="setting_term_any">任意词</string>
    <string name="setting_term_title">书名</string>
    <string name="setting_term_author">作者</string>
    <string name="setting_term_classno">分类号</string>
    <string name="setting_term_isbn">ISBN</string>
    <string name="setting_term_callno">索书号</string>
    <string name="setting_term_publisher">出版社</string>
    <string name="setting_sort_match">匹配度</string>
    <string name="setting_sort_date">出版日期</string>
    <string name="setting_sort_publisher">出版社</string>
    <string name="setting_sortway_asc">升序</string>
    <string name="setting_sortway_sec">降序</string>
    <string name="setting_pagenum_1">20</string>
    <string name="setting_pagenum_2">50</string>
    <string name="setting_pagenum_3">100</string>
   

</resources>