<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >












    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#eee" >



        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="vertical" >

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/school" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/book_but_focus"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/school" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/book_but_focus"
                    android:ems="10"
                    android:inputType="text"
                    android:password="true"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <CheckBox
                    android:id="@+id/checkRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/metro_checkbut_selector"
                    android:checked="true"
                    android:text="@string/login_remember"
                    android:textColor="@color/school" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5" >

                </LinearLayout>

                <Button
                    android:id="@+id/butLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/login" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" >

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="10"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

        </LinearLayout>

    </LinearLayout>

</LinearLayout>